[package]
name = "substratee-worker-enclave"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"
resolver = "2"

[workspace]
members = [
    "chain_relay"
]

[lib]
name = "substratee_worker_enclave"
crate-type = ["staticlib"]

[features]
default = []
production = ['substratee-settings/production']
test = ['substratee-stf/test', 'substratee-storage/test']

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tse = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }
sgx_rand = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize_derive = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx-crypto-helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }

[dependencies]
aes = { version = "0.7.4" }
ofb = { version = "0.5.1" }
codec  = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
primitive-types  = { version = "0.10.1", default-features = false, features = ["codec", "serde_no_std"] }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
retain_mut = { version = "0.1.2"}
derive_more = { version = "0.99.5" }
byteorder = { version = "1.4.2", default-features = false }
arrayvec = { version = "0.7.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
ipfs-unixfs = { default-features = false, git = "https://github.com/whalelephant/rust-ipfs", branch = "w-nstd" }

# scs / integritee
sp-io = { default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"], git = "https://github.com/integritee-network/sgx-runtime", branch = "version-upgrade-f651d45", optional = true}
substrate-api-client = { default-features = false, git = "https://github.com/scs/substrate-api-client", branch = "master" }
sgx-externalities = { default-features = false, git = "https://github.com/integritee-network/sgx-runtime", branch = "version-upgrade-f651d45" }
jsonrpc-core = { default-features = false, git = "https://github.com/scs/jsonrpc", branch = "no_std" }

# mesalock
linked-hash-map = { git = "https://github.com/mesalock-linux/linked-hash-map-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
yasna = { rev = "sgx_1.1.3", default-features = false, features = ["bit-vec", "num-bigint", "chrono", "mesalock_sgx"], git = "https://github.com/mesalock-linux/yasna.rs-sgx" }
rustls = { rev = "sgx_1.1.3", features = ["dangerous_configuration"], git = "https://github.com/mesalock-linux/rustls" }

# for attestation
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
base64 = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-base64-sgx" }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
httparse = { version = "1.3",  default-features = false }
itertools = { version = "0.10.1",  default-features = false, features = []}
bit-vec = { version = "0.6",    default-features = false }
base58 = { rev = "sgx_1.1.3", package="rust-base58", git = "https://github.com/mesalock-linux/rust-base58-sgx", default-features = false, features=["mesalock_sgx"] }

cid = { git = "https://github.com/whalelephant/rust-cid", branch = "nstd", default-features = false }
multibase = { git = "https://github.com/whalelephant/rust-multibase", branch = "nstd", default-features = false }

# local deps
pallet-teerex-storage = { path = "../primitives/pallet-teerex-storage", default-features = false }
substratee-settings = { path = "../primitives/settings" }
substratee-ocall-api = { path = "../primitives/ocall-api", default-features = false }
substratee-get-storage-verified = { path = "../primitives/get-storage-verified", default-features = false }
substratee-sidechain = { path = "../primitives/sidechain", default-features = false }
substratee-sidechain-primitives = { path = "../primitives/sidechain/primitives", default-features = false }
test-utils = { path = "../primitives/test-utils", default-features = false, features = ["sgx"] }
chain-relay = { path = "chain_relay" }
substratee-stf = { path = "../stf", default-features = false, features = ["sgx"] }
substratee-storage = { path = "../primitives/storage", default-features = false }
substratee-worker-primitives= {path = "../primitives/worker", default-features = false }
substratee-node-primitives = {path = "../primitives/node", default-features = false, features = ["sgx"] }

# substrate deps
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { version = "4.0.0-dev", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-finality-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-utils = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }


[patch.crates-io]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] }

[patch."https://github.com/paritytech/substrate"]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] }
sp-io = { git = "https://github.com/integritee-network/sgx-runtime", branch = "version-upgrade-f651d45", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}