[package]
name = "substratee-stf"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[features]
default = ["std"]
sgx = [
    "sgx_tstd",
    "env_logger",
    "log-sgx",
    "sp-io",
    "sgx-runtime",
    "sgx-externalities",
    "derive_more",
    "substratee-worker-primitives",
]
std = [
    "clap",
    "clap-nested",
    "log",
    "base58",
    "sc-keystore",
    "system/std",
    "metadata/std",
    "sp-core/std",
    "hex",
    "substrate-api-client",
    "substrate-client-keystore",
    "my-node-runtime"
]

[dependencies]
log-sgx             = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
env_logger          = { git = "https://github.com/mesalock-linux/env_logger-sgx", optional = true }
clap                = { version = "2.33", optional = true }
clap-nested         = { version = "0.3.1", optional = true }
log                 = { version = "0.4", optional = true }
base58 			    = { version = "0.1", optional = true }
derive_more         = { version = "0.99.5", optional = true }
hex                 = { version = "*", optional = true }

[dependencies.sgx_tstd]
git = "https://github.com/apache/teaclave-sgx-sdk.git"
features = ["untrusted_fs","net","backtrace"]
rev = "v1.1.3"
optional = true

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
version = "1.3.1"
features = ["derive"]

[dependencies.balances]
default-features = false
package = 'pallet-balances'
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.system]
default-features = false
package = 'frame-system'
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.support]
default-features = false
package = 'frame-support'
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.metadata]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
package = "frame-metadata"
default-features=false

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
default-features = false
features = ["full_crypto"]

[dependencies.sp-application-crypto]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
default-features = false
features = ["full_crypto"]

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
default-features = false

[dependencies.sp-io]
default-features = false
git = "https://github.com/scs/sgx-runtime"
features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]
optional = true

[dependencies.sgx-runtime]
default-features = false
git = "https://github.com/scs/sgx-runtime"
optional = true

[dependencies.sgx-externalities]
default-features = false
git = "https://github.com/scs/sgx-runtime"
optional = true

[dependencies.my-node-runtime]
git = "https://github.com/scs/substraTEE-node"
tag = "v0.7.0"
package = "substratee-node-runtime"
optional = true

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
tag = "v0.4.13"
optional = true

[dependencies.substrate-client-keystore]
git = "https://github.com/scs/substrate-api-client"
tag = "v0.4.13"
optional = true

[dependencies.sc-keystore]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
optional = true

[dependencies.substratee-worker-primitives]
path = "../substratee-worker-primitives"
default-features = false
features = ["sgx"]
optional = true

[dev-dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
