[package]
name = "substratee-stf"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[features]
default = ["std"]
sgx = [
    "sgx_tstd",
    "env_logger",
    "log-sgx",
    "sp-io",
    "sgx-runtime",
    "sgx-externalities",
    "derive_more",
    "substratee-worker-primitives",
]
std = [
    "clap",
    "clap-nested",
    "log",
    "base58",
    "sc-keystore",
    "serde",
    "system/std",
    "sp-core/std",
    "hex",
    "substrate-api-client",
    "substrate-client-keystore",
    "substratee-storage/std",
    "my-node-runtime",
]
test = []

[dependencies]
log-sgx = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", optional = true }
clap = { version = "2.33", optional = true }
clap-nested = { version = "0.4.0", optional = true }
log = { version = "0.4", optional = true }
base58 = { version = "0.1", optional = true }
derive_more = { version = "0.99.5", optional = true }
hex = { version = "0.4.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
codec = { version = "2.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
sgx_tstd = { rev = "v1.1.3", features = ["untrusted_fs","net","backtrace"], git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

# local crates
substratee-storage = { path = "../primitives/storage", default-features = false }
substratee-worker-primitives = { default-features = false, features = ["sgx"], path = "../primitives/worker", optional = true }

# Substrate dependencies
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"] }
balances = { version = "4.0.0-dev", package = 'pallet-balances', default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
system = { version = "4.0.0-dev",  package = "frame-system", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
support = { version = "4.0.0-dev",  package = "frame-support", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { version = "4.0.0-dev", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-keystore = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }

# scs / integritee
sp-io = { default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"], git = "https://github.com/integritee-network/sgx-runtime", branch = "master", optional = true }
sgx-runtime = { default-features = false, git = "https://github.com/integritee-network/sgx-runtime", branch = "master", optional = true }
sgx-externalities = { default-features = false, git = "https://github.com/integritee-network/sgx-runtime", branch = "master", optional = true }
my-node-runtime = { package = "integritee-node-runtime", git = "https://github.com/integritee-network/integritee-node", branch = "master", optional = true }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch = "master", optional = true }
substrate-client-keystore = { git = "https://github.com/scs/substrate-api-client", branch = "master", optional = true }

[dev-dependencies]
sp-keyring = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
