[package]
name = "substratee-node-calls"
version = "4.0.0"
authors = ["clangenbacher <christian.langenbacher@scs.ch>"]
edition = "2018"

[dependencies]
log = "0.4"
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
primitive-types = { version = "0.6", default-features = false, features = ["codec"] }
regex = "1"

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
tag = "api-M1.5"

[dependencies.primitives]
git = "https://github.com/paritytech/substrate"
package = "substrate-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.runtime_primitives]
git = "https://github.com/paritytech/substrate"
package = "sr-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
