[package]
name = "substratee-node-primitives"
version = "0.8.0"
authors = ["clangenbacher <christian.langenbacher@scs.ch>"]
edition = "2018"

[dependencies]
log             = { version = "0.4", optional = true }
codec           = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
primitive-types = { version = "0.9", default-features = false, features = ["codec"] }
base58 			= { version = "0.1", optional = true }

[dependencies.sgx_tstd]
git = "https://github.com/apache/teaclave-sgx-sdk.git"
features = ["untrusted_fs","net","backtrace"]
rev = "v1.1.3"
optional = true

[dependencies.my-node-runtime]
git = "https://github.com/capsule-corp-ternoa/chain"
package = "ternoa-runtime"
optional = true
default-features = false

[dependencies.my-node-primitives]
git = "https://github.com/capsule-corp-ternoa/chain"
package = "ternoa-primitives"
optional = true
default-features = false

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
branch = "version-update-e5437e"
optional = true

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features = false
optional = true

[features]
default = ['std']
std = [ 'substrate-api-client',
        'my-node-runtime',
        'sp-core/std',
        'sp-runtime',
        'base58',
        'log',
        'my-node-primitives',
        ]
sgx = [ 'sgx_tstd' ]
